--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.221.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
